data/derived/sp14/progs/unify/prog4030.ml.out
Characters 110-125:
  digitsOfInt n2;
  ^^^^^^^^^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type 'a list
